# ros-exercises

./: .gitmodules  README.md
ex_solution/: CMakeLists.txt  package.xml
ex_solution/scripts/: exercise_action_client.py  exercise_action_server.py
exercise/: CMakeLists.txt  package.xml
fibonacci_action/: CMakeLists.txt
fibonacci_action/scripts/: fibonacci_action_client.py
install/: local_setup.sh  setup.sh
install/ex_solution/lib/ex_solution/: exercise_action_client.py  exercise_action_server.py
install/ex_solution/share/ex_solution/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/exercise/share/exercise/: local_setup.sh  package.sh
install/fibonacci_action/lib/fibonacci_action/: fibonacci_action_client.py  fibonacci_action_server.py
install/fibonacci_action/share/fibonacci_action/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navigation2_dist/lib/navigation2_dist/: path_len
install/navigation2_dist/share/navigation2_dist/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigation2_turtle/share/navigation2_turtle/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigation2_turtle/share/navigation2_turtle/launch/: navigation2_navfn.launch.py  navigation2_smac2d.launch.py  navigation2_theta_star.launch.py
install/navigation2_turtle/share/navigation2_turtle/param/: waffle_navfn.yaml  waffle_smac2d.yaml  waffle_theta_star.yaml
log/: latest_build
pub_sub/: CMakeLists.txt  package.xml
pub_sub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
(+62 files in other folders)
