<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation2_turtle</name>
  <version>1.0.0</version>
  <description>
    ROS 2 launch scripts for navigation2 for turtlebot3
  </description> 
  <maintainer email="szymon.z.kwiatkowski@gmail.com">Szymon Kwiatkowski</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/SzymKwiatkowski/Turtlebot_NavStack</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
